# xsens-mvn

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
.ci/: travis-deps.sh
cmake/: FindXsensXME.cmake  YARP_experimentalConfig.cmake.in
conf/: yarprobotinterface_xsens.xml
msgs/: CMakeLists.txt
msgs/thrift/: XsensDriverService.thrift
mvnxparser/: CMakeLists.txt  MVNXStreamReaderDriver.cpp  mvnxStreamReaderDriver.cpp  xmlStreamReaderDriver.cpp
mvnxparser/MVNXStreamReader/: CMakeLists.txt  MVNXParser.cpp  MVNXStreamReader.cpp  MVNXStreamReader.h
mvnxparser/MVNXStreamReader/Test/: MVNXStreamReaderDriver.cpp  Meri-020.mvnx  schema_orig.xsd
mvnxparser/XMLStreamReader/: CMakeLists.txt  XMLDataContainers.h  XMLStreamReader.cpp  XMLStreamReader.h
mvnxparser/XMLStreamReader/Test/: XMLStreamReaderDriver.cpp
mvnxparser/XMLStreamReader/XMLMessageHandler/: CMakeLists.txt  XMLMessageHandler.cpp  XMLMessageHandler.h
mvnxparser/mvnxStreamReader/: CMakeLists.txt  mvnxDataContainers.h  mvnxStreamReader.cpp  mvnxStreamReader.h
mvnxparser/xmlStreamReader/: CMakeLists.txt  xmlDataContainers.h  xmlStreamReader.cpp  xmlStreamReader.h
mvnxparser/xmlStreamReader/xmlMessageHandler/: CMakeLists.txt  xmlMessageHandler.cpp  xmlMessageHandler.h
xsensdriver/: CMakeLists.txt
xsensdriver/conf/: xsens_mvn.ini
xsensdriver/include/: XsensMVN.h  XsensMVNCalibrator.h  XsensMVNPrivate.h
xsensdriver/src/: XsensMVN.cpp  XsensMVNCalibrator.cpp  XsensMVNPrivate.cpp  test.cpp
xsensremote/: CMakeLists.txt
xsensremote/conf/: xsens_mvn_remote.ini
xsensremote/include/: XsensMVNRemote.h
xsensremote/src/: XsensMVNRemote.cpp
xsensremotelight/: CMakeLists.txt
xsensremotelight/conf/: xsens_mvn_remote_light.ini
xsensremotelight/include/: XsensMVNRemoteLight.h
xsensremotelight/src/: XsensMVNRemoteLight.cpp
xsenswrapper/: CMakeLists.txt
xsenswrapper/conf/: xsens_mvn_wrapper.ini
xsenswrapper/include/: XsensMVNWrapper.h
xsenswrapper/src/: XsensMVNWrapper.cpp
xsenswrapper/thrift/: XsensDriverService.thrift  XsensFrame.thrift
yarp/: CMakeLists.txt  IFrameProvider.cpp  IHumanSkeleton.cpp  IIMUFrameProvider.cpp  IXsensMVNInterface.cpp
yarp/include/yarp/dev/: IFrameProvider.h  IHumanSkeleton.h  IIMUFrameProvider.h  IXsensMVNInterface.h
